<resources>
    <string name="app_name">kRepublic</string>
    <string name="krepublic">k REPUBLIC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="fraud">Fraud</string>
    <string name="bribery">Bribery</string>
    <string name="abuse">Abuse of power</string>
    <string name="waste">Waste of public resources</string>
    <string name="extortion">Extortion</string>
    <string name="embezzlement">Embezzlement</string>
    <string name="favoritism">Favoritism, nepotism, clientelism</string>
    <string name="doublearrow">&#187;</string>
    <string name="frauddescription">An act of deliberate deception to secure unlawful gain</string>
    <string name="briberydescription">Money or gift offered to secure illicit gain</string>
    <string name="abusedescription">Use of office for personal gain, injustice, or other malfeasance</string>
    <string name="wastedescription">Deliberate or negligent misuse of public resources</string>
    <string name="extortiondescription">Money or other items obtained through force or threats</string>
    <string name="embezzlementdescription">Theft or misappropriation of funds</string>
    <string name="favoritismdescription">Unfair advantage given to relatives, associates or supporters</string>
    <string name="facebook_app_id">799290236855997</string>
    <string name="title_activity_incident_detail">IncidentDetail</string>
    <string name="opening_line">For the love of God, my country and myself, I\'d like to report a case of </string>
    <string name="at">At</string>
    <string name="location_hint">City, town, institution, office, etc.</string>
    <string name="incident_description">Here is what happened</string>
    <string name="evidence">And I even have as evidence, a(n)</string>
    <string name="honor_code"><b>Honor code:</b> I promise that this is true and not a libelous statement intended to ruin someone\'s reputation</string>
    <string name="video">Video</string>
    <string name="voice">Voice</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="hello_world">Hello world!</string>
    <string name="submit">Submit</string>
    <string name="success">Report successfully posted!</string>
    <string name="failed">Report posting failed</string>
    <string name="soundcloud_client_id">a6897d305d66d516be42c568de29a95c</string>
    <string name="soundcloud_client_secret">afa997bbe96d2a114db9b17a4c0c5f2a</string>
    <string name="soundcloud_pword">kwansema\'smysteries</string>
    <string name="soundcloud_login_id">kwansemarepublic@gmail.com</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="createAccount">Join</string>
    <string name="joinTheRepublic">Join the republic</string>
    <string name="phone">Phone</string>
    <string name="title_activity_login">Login</string>
    <string name="dontHaveAccount">Not a member yet?</string>
    <string name="login">Login</string>
    <string name="login_failed">Wrong username or password</string>
    <string name="accountLookupFailed">No user exists with this number in the system</string>
    <string name="accountExistForOtherDevice">An account has already been set up on a different device. Would you like to set it up for this device instead?</string>
    <string name="differentDevices">Different Devices</string>
    <string name="pleaseWait">Please wait&#8230;</string>
    <string name="accountExistForPhone">An account already exists for this phone number. Please enter a different phone number</string>
    <string name="passwordsNotMatch">Passwords do not match</string>
    <string name="createAccountFailed">Error creating account. Please ensure that you have a stable internet connection and try again</string>
    <string name="createAccountSuccess">Account successfully created!</string>
    <string name="title_activity_confirm">Confirm phone</string>
    <string name="confirmNumber">Confirm phone number</string>
    <string name="confirmNumberQuestion">An sms with your confirmation code will be sent to the phone number provided. Do you want to continue?</string>
    <string name="sendConfirmCode">Send confirmation code</string>
    <string name="enterConfirmDigits">Enter the digits received via sms</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation_failed">Confirmation failed. Please try again</string>
    <string name="this_is_evidence"> is my evidence</string>
    <string name="posting">Posting report&#8230;</string>
    <string name="go_to_page">Go to the republic page</string>
    <string name="view_reports">View your reports"</string>
    <string name="invite_friends">Invite friends to the republic</string>
    <string name="report_corruption">Report corruption</string>
    <string name="view">View</string>
    <string name="loading">loading&#8230;</string>
    <string name="reports">Reports</string>
    <string name="checkHonor">Please read and check the honor code to proceed</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="quote">\"The world will not be destroyed by those who do evil, but by those who watch them without doing anything\"</string>
    <string name="quote_author">-Albert Einstein</string>
    <string name="wrong_number_input">Phone number cannot contain special characters or spaces</string>
    <string name="empty_name">Please enter your name</string>
    <string name="empty_phone">Please enter your phone number</string>
    <string name="empty_pass">Please enter a password</string>
    <string name="description_or_location_empty">Please provide both location and description</string>
</resources>
