<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:context="com.republic.ui.fragments.IncidentDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bluegradient"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:padding="16dp"
        android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@drawable/whiterounded"
                android:elevation="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/at"/>

                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/editfieldbackgrounddarkline"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incident_description"/>

                <EditText
                    android:id="@+id/incidentDescription"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/editfieldbackgrounddarkline2"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:paddingBottom="8dp"
                    android:maxLines="10"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evidence"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageButton
                        android:id="@+id/videoButton"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.25"
                        android:contentDescription="@string/video"
                        android:scaleType="fitCenter"
                        android:src="@drawable/video"
                        android:elevation="2dp"/>

                    <ImageButton
                        android:id="@+id/cameraButton"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.25"
                        android:contentDescription="@string/photo"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/camera"
                        android:elevation="2dp"/>

                    <ImageButton
                        android:id="@+id/voiceButton"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.25"
                        android:contentDescription="@string/voice"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/voice"
                        android:visibility="visible"
                        android:elevation="2dp"
                        />

                    <Button
                        android:id="@+id/recordingButton"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.25"
                        android:drawableLeft="@drawable/recording"
                        android:paddingLeft="5dp"
                        android:visibility="gone"
                        android:elevation="2dp"/>

                    <ImageButton
                        android:id="@+id/galleryButton"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.25"
                        android:contentDescription="@string/gallery"
                        android:paddingLeft="1dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/gallery"
                        android:elevation="2dp"/>
                </LinearLayout>

                <CheckBox
                    android:id="@+id/honorCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center|fill"
                    android:text="@string/honor_code"/>

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:elevation="2dp"/>
            </LinearLayout>

    </LinearLayout>
</ScrollView>
