<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:context="com.republic.ui.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bluegradient"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="25dp"
        android:focusable="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/krepublic"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="25dp"/>
        <EditText
            android:id="@+id/loginPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/editfieldbackground"
            android:drawableLeft="@drawable/phone"
            android:inputType="phone"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/editfieldbackground"
            android:drawableLeft="@drawable/lock"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:background="@drawable/borderonly"
            android:text="@string/login"
            android:textColor="@android:color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/dontHaveAccount"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/borderonly"
            android:text="@string/joinTheRepublic"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</ScrollView>